WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
83850
JSDocument::setLocation does too much bare-handed lifting
https://bugs.webkit.org/show_bug.cgi?id=83850
Summary
JSDocument::setLocation does too much bare-handed lifting
Adam Barth
Reported
2012-04-12 18:50:07 PDT
JSDocument::setLocation does too much bare-handed lifting
Attachments
Patch
(2.25 KB, patch)
2012-04-12 18:51 PDT
,
Adam Barth
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2012-04-12 18:51:51 PDT
Created
attachment 137022
[details]
Patch
WebKit Review Bot
Comment 2
2012-04-13 01:57:52 PDT
Comment on
attachment 137022
[details]
Patch Clearing flags on attachment: 137022 Committed
r114098
: <
http://trac.webkit.org/changeset/114098
>
WebKit Review Bot
Comment 3
2012-04-13 01:57:56 PDT
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 4
2012-04-13 09:20:03 PDT
Comment on
attachment 137022
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=137022&action=review
> Source/WebCore/bindings/js/JSDocumentCustom.cpp:74 > + UString locationString = value.toString(exec)->value(exec); > + if (exec->hadException()) > + return;
Is there no exception possible in toString? If there is, I think we’d need two separate return statements.
Darin Adler
Comment 5
2012-04-13 09:20:49 PDT
Comment on
attachment 137022
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=137022&action=review
>> Source/WebCore/bindings/js/JSDocumentCustom.cpp:74 >> + return; > > Is there no exception possible in toString? If there is, I think we’d need two separate return statements.
Or maybe toString can have an exception, but value can't.
Adam Barth
Comment 6
2012-04-13 09:29:07 PDT
(In reply to
comment #5
)
> (From update of
attachment 137022
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=137022&action=review
> > >> Source/WebCore/bindings/js/JSDocumentCustom.cpp:74 > >> + return; > > > > Is there no exception possible in toString? If there is, I think we’d need two separate return statements. > > Or maybe toString can have an exception, but value can't.
I believe that's the case, but I'll verify by reading the code.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug