JSDocument::setLocation does too much bare-handed lifting https://bugs.webkit.org/show_bug.cgi?id=83850

Reviewed by Sam Weinig.

As part of auditing all the ways of kicking off a navigation, I
happened to read JSDocument::setLocation, which uses very old patterns.
This patch updates it to do things the "modern" way.  There shouldn't
be any behavior change.

* bindings/js/JSDocumentCustom.cpp:
(WebCore::JSDocument::setLocation):


Canonical link: https://commits.webkit.org/101380@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114098 268f45cc-cd09-0410-ab3c-d52691b4dbfc